--- a/public/css/main.css
+++ b/public/css/main.css
@@ -37,7 +37,7 @@
   
   table td, table th {
     border: 1px solid #ddd;
-    padding: 8px;
+    padding: 0px;
   }
   
   table tr:nth-child(even){background-color: #f2f2f2;}
@@ -45,9 +45,13 @@
   table tr:hover {background-color: #ddd;}
   
   table th {
-    padding-top: 12px;
-    padding-bottom: 12px;
+    padding-top: 6px;
+    padding-bottom:6px;
     text-align: left;
     background-color: #4CAF50;
     color: white;
+  }
+
+  #PatDetails{
+    display: none;
   }
